--- a/assets/global.css
+++ b/assets/global.css
@@ -3,6 +3,13 @@ body {
     font-family: 'IBM Plex Sans', sans-serif;
 }
 
+button {
+  font-size: inherit;
+  display: block;
+  border: none;
+  background: transparent;
+  padding: 0;
+}
 
 input[type="text"] {
     font-family: inherit;
@@ -10,7 +17,22 @@ input[type="text"] {
     font-size: 1.125rem;
     padding: 0.7rem;
     border-radius: 6px;
-    width: 9rem;
+    box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.2);
+    width: 15rem;
+}
+
+.name-entry {
+  display: flex;
+}
+
+.name-entry > input {
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+}
+
+.name-entry > .btn {
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
 }
 
 .input-label {
@@ -76,16 +98,14 @@ input[type="text"] {
   list-style: none;
 
   padding: 0;
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 1rem;
 }
 
 .party-list li {
-    width: 7rem;
-    margin: 1rem;
-    background: #ddd;
     border-radius: 999rem;
+    display: flex;
 }
 
 .party-list img {
@@ -95,19 +115,18 @@ input[type="text"] {
     display: block;
 }
 
-.party-list button {
-    display: block;
-    border: none;
-    background: transparent;
-    padding: 0;
-    position: relative;
+.party-list__item {
+    width: 100%;
+    padding: 1rem 1.5rem;
+    background: #ddd;
+
+    display: flex;
+    justify-content: space-between;
 }
 
-.party-list .you {
-    position: absolute;
-    right: 0;
-    bottom: 0;
-    transform: translate(5px, 0) rotate(-45deg);
+.emoji-icon {
+  display: inline-block;
+  margin-left: 0.5rem;
 }
 
 .main {
@@ -133,6 +152,12 @@ input[type="text"] {
   justify-content: center;
 }
 
+@media (min-width: 30em) {
+  .join-chunk {
+    min-width: 30em;
+  }
+}
+
 .party-chunk {
   flex: 1;
 
@@ -141,6 +166,12 @@ input[type="text"] {
   justify-content: flex-start;
 
   text-align: center;
+}
+
+.text-label {
+  display: block;
+  font-weight: bold;
+  margin-bottom: 0.5rem;
 }
 
 .input-and-button {
