--- a/assets/global.css
+++ b/assets/global.css
@@ -51,6 +51,7 @@ input[type="text"] {
     min-width: 98px;
     padding: 0.7rem 1.2rem;
     transition: 0.1s all ease-out;
+    display: inline-block;
 }
 
 .btn--primary {
