--- a/assets/global.css
+++ b/assets/global.css
@@ -100,7 +100,7 @@ input[type="text"] {
 
   padding: 0;
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: repeat(auto-fill, minmax(10em, 1fr));
   gap: 1rem;
 }
 
