--- a/assets/global.css
+++ b/assets/global.css
@@ -1,15 +1,21 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC&display=swap');
+:root {
+  --bg: #e6e6e6;
+  --fg: #000;
+  --text: black;
+  --cta: #ff0000;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  margin: 0;
+}
+
 
 html {
-  font-family:
-    'Source Sans Pro',
-    -apple-system,
-    BlinkMacSystemFont,
-    'Segoe UI',
-    Roboto,
-    'Helvetica Neue',
-    Arial,
-    sans-serif;
+  font-family: 'Noto Sans TC', sans-serif;
   font-size: 16px;
   word-spacing: 1px;
   -ms-text-size-adjust: 100%;
@@ -19,11 +25,43 @@ html {
   box-sizing: border-box;
 }
 
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-  margin: 0;
+body {
+    background: #F3F3F3;
+    background: var(--bg);
+
+    max-width: 38em;
+    margin: 0 auto;
+
+    /* overflow: hidden; */
+    flex-direction: column;
+    justify-content: flex-start;
+
+
+    -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+    -khtml-user-select: none; /* Konqueror HTML */
+    -moz-user-select: none; /* Old versions of Firefox */
+    -ms-user-select: none; /* Internet Explorer/Edge */
+    user-select: none; /* Non-prefixed version, currently
+    supported by Chrome, Edge, Opera and Firefox */
+
+}
+
+h1, h2 {
+  margin: 0 0 1.5rem;
+}
+
+button {
+  font-size: inherit;
+  display: block;
+  border: none;
+  background: transparent;
+  padding: 0;
+}
+
+select, option {
+  font-family: inherit;
+  font-family: 'Noto Sans TC', sans-serif;
 }
 
 .button--green {
@@ -53,19 +91,6 @@ html {
 .button--grey:hover {
   color: #fff;
   background-color: #35495e;
-}
-
-body {
-    background: #F3F3F3;
-    font-family: 'IBM Plex Sans', sans-serif;
-}
-
-button {
-  font-size: inherit;
-  display: block;
-  border: none;
-  background: transparent;
-  padding: 0;
 }
 
 input[type="text"] {
