custom word selectors
Emitted events will be used to "claim" blanks by players. claimed blanks
will be made when players open a word selector, and cleared when they
close it (or disconnect, or time out, etc)

blue box = you are editing
gray box = somebody else is editing

--- a/assets/global.css
+++ b/assets/global.css
@@ -52,11 +52,13 @@ h1, h2 {
 }
 
 button {
+  font-family: inherit;
   font-size: inherit;
   display: block;
   border: none;
   background: transparent;
   padding: 0;
+  line-height: inherit;
 }
 
 select, option {
