--- a/assets/global.css
+++ b/assets/global.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC&display=swap');
+@import url('http://fonts.googleapis.com/css2?family=Noto+Sans+TC&display=swap');
 :root {
   --bg: #e6e6e6;
   --fg: #000;
