--- a/assets/global.css
+++ b/assets/global.css
@@ -287,7 +287,11 @@ input {
   color: white;
   width: 100%;
   padding: 1.5rem;
+
+  position: relative;
+  z-index: 1;
 }
+
 .mod-panel__title {
   margin-bottom: 1.5rem;
   display: block;
@@ -297,4 +301,9 @@ input {
 .mod-panel__controls {
   display: flex;
   gap: 1rem;
+}
+.controls {
+  position: absolute;
+  top: 2rem;
+  right: 2rem;
 }
